# 93feetofdrums

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  VOID_DRUM_ENGINE_PLAN_1.md  build.ps1  install.ps1  package.ps1
.github/workflows/: build.yml
docs/: SAMPLE_PACK_GUIDE.md
engine/: FolderScanner.cpp  FolderScanner.h  HostIntegration.cpp  HostIntegration.h  MIDIMapper.cpp  MIDIMapper.h  MixBus.cpp  MixBus.h  PadDSP.cpp  PadDSP.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SampleLoader.cpp  SampleLoader.h  SampleRegistry.cpp  SampleRegistry.h  VoiceAllocator.cpp  VoiceAllocator.h
engine/interfaces/: IKitPreset.h  IMIDIMapping.h  IPadState.h  ISampleRegistry.h
installer/: installer.iss
ui/: DrumKitView.cpp  DrumKitView.h  FXPanel.cpp  FXPanel.h  MixerStrip.cpp  MixerStrip.h  PadGrid.cpp  PadGrid.h  PluginEditor.cpp  PluginEditor.h  PresetBrowserUI.cpp  PresetBrowserUI.h  SampleBrowser.cpp  SampleBrowser.h  VoidLookAndFeel.cpp  VoidLookAndFeel.h  WaveformDisplay.cpp  WaveformDisplay.h
